fix: scrollbar showing up in desktop layout

--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -2,6 +2,10 @@
 
 *
   box-sizing: border-box
+
+::-webkit-scrollbar 
+  width: 0
+  background: transparent
   
 body
   height: 100vh
